# kkt-hardnet

./: .gitignore  .readthedocs.yaml  INSTALL.md  LICENSE  LICENSE.txt  README.md  VERSION.md  create_env.bat  create_env.sh  installer.bat  installer.sh  main.py  requirements.txt  run.sh  run_general.py  runner.bat  runner.sh
Formulate/: everything.py
KKT/: creator.py  formulation1.py  formulation2.py  formulation3.py
Newton/: runner.py  solver.py  torch_newton_solver.py
Op_problems/problem_ED_Column/: ED_Col_Data.csv  ED_Col_Sim.csv  kkt_hardnet_losses.npz  kkt_hardnet_model.pth  kkt_hardnet_predictions.csv  mlp_losses.npz  mlp_model.pth  mlp_predictions.csv  model_config.json  pinn_losses.npz  pinn_model.pth  pinn_predictions.csv  problem.json
Op_problems/problem_pooling/: Pooling_Problem.txt  Pooling_dataset.csv  Pooling_dataset_minmax_stats.csv  config.json  (+23 more)
case/: __init__.py
dataset/: dataset.py  test_dataset1.py
docs/: INSTALL.md  PROBLEM.md  PUBLISH.md  REMARKS_ON_UPDATES.rst  VERSION.md  citations.rst  conf.py
kkthn/: LICENSE  README.md  install_info.py  install_selector.py  pyproject.toml  requirements.gpu.txt  requirements.txt  setup.py
kkthn/src/jaxmodel/: __init__.py  approximations.py  autodiff.py  blocks.py  bounds.py  builder.py  constraints.py  highlevel.py  model.py  objective.py  parameters.py  types.py  variables.py
kkthn/src/kkthn/: __init__.py  backbone.py  builder.py  native_projection.py  problem_builder.py  problems.py  projection.py  string_problem.py  training.py  utils.py
kkthn/src/scripts/: __init__.py
kkthn/src/scripts/factory/: __init__.py  nlp_factory.py  nonconvx_factory.py
kkthn/src/scripts/misc/: nlp_generator.py  solver_config.py
kkthn/src/solgen/: __init__.py  cvxpy_solver.py  model.py  types.py
model/: kkt_hardnet_trainer.py  mlp_trainer.py  model.py  network.py  newton.py  pinn_trainer.py  trainer.py
notebooks/: 01_qp_forward.ipynb  02_qcqp_forward.ipynb  03_nlp_forward.ipynb  04_nonconvex_forward.ipynb  05_general_block_forward.ipynb  05_general_forward.ipynb  06_general_normal_forward.ipynb  06_general_optimize.ipynb  07_general_inverse.ipynb  07_general_normal_inverse.ipynb  08_ED_Column.ipynb  08_ED_Column_test_only.ipynb  Improved_KKT.ipynb  ed_column.ipynb  pooling_problem.ipynb
run/: newton_runner.py  run.py  utils.py
scripts/: README.md
(+262 files in other folders)
