[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kkthn"
version = "0.1.2"
description = "KKT-HardNet: JAX surrogate regression with a hard KKT projection layer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Bimol Nath Roy", email = "bimolnathroy@tamu.edu"},
    {name = "Rahul Golder", email = "rahulgolder8420@tamu.edu"}
]
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
